@startuml

!define table(x) class x << (T,#FFAAAA) >>
hide methods

table(member) {
    <&key> id: bigint
    username: varchar
    password: varchar
    email_address: varchar
    description: varchar
    role: Role
    badge: Badge
    credit: int
    blocked_credits: int
    lifetime_credits: int
    num_of_refusals: int
    address: varchar
    photo: varchar
    <&key> geolocation_id: bigint
}

table(message) {
    <&key> id: bigint
    date: timestamp
    status: varchar
    text: varchar
    <&key> member_id: bigint
}

table(tags) {
    <&key> id: bigint
    name: varchar
}

table(interests) {
    <&key> member_id: bigint
    <&key> tag_id: bigint
}


table(talents) {
    <&key> member_id: bigint
    <&key> tag_id: bigint
}

table(offer_tags) {
    <&key> offer_id: bigint
    <&key> tag_id: bigint
}


table(event_tags) {
    <&key> event_id: bigint
    <&key> tag_id: bigint
}

table(geo_location) {
    <&key> id: bigint
    latitude: double
    longitude: double
}

table(offer) {
    <&key> id: bigint
    offer_type: varchar
    name: varchar
    description: varchar
    date: timestamp
    duration: int
    status: varchar
    repeating_type : varchar
    max_number_of_participants: int
    cancellationDeadline: int
    end_offer_requests: int
    photo: varchar
    address: varchar
    <&key> member_id: bigint
    <&key> geolocation_id: bigint
    <&key> offer_id: bigint
}

table(offer_applicants) {
    <&key> offer_id: bigint
    <&key> memebr_id: bigint
}

table(offer_participants) {
    <&key> offer_id: bigint
    <&key> member_id: bigint
}

table(offer_feedback) {
    <&key> id: bigint
    comment: varchar
    rating: int
    <&key> giver_id: bigint
    <&key> receiver_id: bigint
    <&key> offer_id: bigint
}

table(event) {
    <&key> id: bigint
    status: varchar
    repeating_type: varchar
    name: varchar
    description: varchar
    date: timestamp
    duration: int
    status: varchar
    photo: varchar
    address: varchar
    <&key> member_id: bigint
    <&key> geolocation_id: bigint
    <&key> event_id: bigint
}
table(event_participants) {
    <&key> event_id: int
    <&key> account_id: int
}

table(event_feedback) {
    <&key> id: bigint
    comment: varchar
    rating: int
    <&key> giver_id: bigint
    <&key> receiver_id: bigint
    <&key> event_id: bigint
}

member::geolocation_id -- geo_location::id
message::member_id -- member::id
member::id -- interests::member_id
interests::tag_id -- tags::id
member::id -- talents::member_id
talents::tag_id -- tags::id
offer_tags::offer_id -- offer::id
offer_tags::tag_id -- tags::id
event_tags::event_id -- event::id
event_tags::tag_id -- tags::id
offer::member_id -- member::id : offerer
offer::geolocation_id -- geo_location::id
offer::offer_id -- offer::id : parent
offer_applicants::offer_id -- offer::id
offer_applicants::member_id --member::id
offer_participants::offer_id -- offer::id
offer_participants::member_id -- member::id
offer_feedback::giver_id -- member::id
offer_feedback::receiver_id -- member::id
offer_feedback::offer_id -- offer::id
event::member_id -- member::id : organizer
event::geolocation_id -- geo_location::id
event::event_id -- event::id : parent
event_participants::event_id -- event::id
event_participants::member_id -- member::id
event_feedback::event_id -- event::id

@enduml